another fix for the home gap

--- a/src/app/components/core/home/home.component.css
+++ b/src/app/components/core/home/home.component.css
@@ -1,11 +1,11 @@
 .container{
-  padding: 16px;
+  padding: 16px 0 16px 16px;
   width: 100%;
   margin: 0 auto 0 auto;
 }
 
 .card-container{
-  margin-bottom: 16px;
+  padding: 8px;
 }
 
 .title-material-icons{
